Fix character sheets getting too large

--- a/css/popup.css
+++ b/css/popup.css
@@ -15,6 +15,8 @@
     align-items: center;
     justify-content: center;
     margin: 64px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .popupInnerContent {
